crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__conversion__shr_s_i64.snap
---
source: crates/dora-compiler/src/wasm/tests/conversion.rs
expression: op
snapshot_kind: text
---
module {
  func.func @f0(%arg0: !llvm.ptr, %arg1: i64, %arg2: i64) -> i64 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i64 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i64, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i64 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i64, !llvm.ptr
    %2 = llvm.load %0 : !llvm.ptr -> i64
    %3 = llvm.load %1 : !llvm.ptr -> i64
    %c63_i64 = arith.constant 63 : i64
    %4 = arith.minui %2, %c63_i64 : i64
    %5 = arith.shrsi %3, %4 : i64
    cf.br ^bb1(%5 : i64)
  ^bb1(%6: i64):  // pred: ^bb0
    return %6 : i64
  }
}
