crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__conversion__shr_u_i32.snap
---
source: crates/dora-compiler/src/wasm/tests/conversion.rs
expression: op
snapshot_kind: text
---
module {
  func.func @f0(%arg0: !llvm.ptr, %arg1: i32, %arg2: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg2, %1 : i32, !llvm.ptr
    %2 = llvm.load %0 : !llvm.ptr -> i32
    %3 = llvm.load %1 : !llvm.ptr -> i32
    %c255_i32 = arith.constant 255 : i32
    %4 = arith.minui %2, %c255_i32 : i32
    %5 = arith.shrsi %3, %4 : i32
    cf.br ^bb1(%5 : i32)
  ^bb1(%6: i32):  // pred: ^bb0
    return %6 : i32
  }
}
